css/custom.css
/*
 * Base structure
 */

body {
    text-shadow: none;
    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
    font-family: 'Courier New', Courier, monospace;
    background-color: #eeeeee !important;
  }

/*
 * Navbar
 */
 .navbar {
    background-color: #eeeeee !important;
 }

 .navbar-transparent {
  background-color: transparent !important;
 }

 .nav-text-container {
  max-width: 70rem;
}

.navbar-nav .nav-item {
  margin-left: 15px;
}

.navbar-nav .nav-link {
  color: #413622 !important;
  border-bottom: .25rem solid transparent
}

.navbar-nav .nav-link:hover,
.navbar-nav .nav-link:focus {
  color: gray;
  border-bottom-color: rgba(255, 255, 255, .25);
}

a.navbar-brand.nav-link.fw-bold.py-1.px-0.active {
  color: #413622 !important;
}

/*
 * Jumbotron
 */
.jumbotron {
  margin-bottom: 0;
  background-size: cover;
  background-position: center;
  text-align: center;
  color: #ffffff;
  padding-top: 10rem;
  padding-bottom: 18rem;
}

/* Define different background images for each page */
.jumbotron-rsvp {
  background-image: url("../images/mountainblur.jpg");
}
.jumbotron-story {
  background-image: url("../images/cheekkiss.jpg");
}
.jumbotron-schedule {
  background-image: url("../images/rockhands.jpg");
}
.jumbotron-travel {
  background-image: url("../images/leading.jpg");
}
.jumbotron-faq {
  background-image: url("../images/foreheadkiss.jpg");
}
.jumbotron-ty {
  background-image: url("../images/dancing.jpg");
}

/*
 * Footer
 */
 .my-4 {
  margin: 0rem !important;
}

/* Style for image overlays */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
  display: none;
  align-items: center;
  justify-content: center;
  z-index: 1050;
}
.overlay img {
  max-height: 100%;
  max-width: 100%;
}


/* Dark mode styles */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #eeeeee !important;
    color: black;
  }

  .navbar {
    --bs-navbar-toggler-border-color: lightgray;
    color: rgba(65, 54, 34, 0.8);
  }
  :root {
    --bs-emphasis-color-rgb: black;
    --bs-secondary-color: gray;
  }
  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  }

  .card-body {
    background: white !important;
  }
  .card {
    --bs-card-border-color: lightgray;
  } 
}

